<resources>
    <string name="app_name">魅力马龙</string>
    <string name="app_desciption">马龙县互联网+公共服务平台</string>
    <string name="title_activity_hello">魅力马龙</string>
    <string name="title_activity_index">魅力马龙</string>
    <string name="title_activity_style2_index">欢迎使用</string>
    <string name="action_settings">设置</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_web">在线内容</string>
    <string name="title_activity_news_info_home">马龙资讯</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_business">招商</string>
    <string name="title_activity_channel_of_cover_style">频道</string>
    <string name="title_activity_web_browser">WebBrowserActivity</string>
    <string name="title_activity_image_scroll_bar">ImageScrollBarActivity</string>
    <string name="title_activity_oa__login">系统登录</string>

    <!--xlistview相关-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">立即登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">账号有误</string>
    <string name="error_invalid_password">密码有误</string>
    <string name="error_incorrect_password">密码有误</string>
    <string name="error_field_required">请输入</string>
    <string name="permission_rationale">"请联系管理员确认你的账号信息."
    </string>
    <string name="title_activity_oalogin">马龙县互联网+公共管理系统</string>
    <string name="title_activity_index_of_oa">马龙县互联网+公共管理系统</string>
    <string name="title_activity_app_erweima_code">AppErweimaCodeActivity</string>
    <string name="title_activity_weather_futrue">WeatherFutrueActivity</string>
    <string name="title_activity_navi_start">NaviStartActivity</string>

    <!--mapabc-->
    <string name="hello_world">Hello world!</string>
    <string name="start_title">示例代码</string>
    <string name="base_function">基本功能</string>
    <string name="hud_title">HUD显示</string>
    <string name="extend_title">扩展功能</string>
    <string name="extend_navi_navi">自定义导航</string>
    <string name="navibar_title">路径规划</string>
    <string name="navi_car">驾车</string>
    <string name="navi_foot">步行</string>
    <string name="start_hud_navi">HUD显示</string>
    <string name="complex_function">综合展示</string>
    <string name="navi_empty_car">"驾   车"</string>
    <string name="navi_empty_foot">"步   行"</string>
    <string name="navi_start">"起    点"</string>
    <string name="navi_middle">途经点</string>
    <string name="navi_end">"终    点"</string>
    <string name="navi_strategy">"策    略"</string>
    <string name="navi_route">路径规划</string>
    <string name="navi_navi">模拟导航</string>
    <string name="start_navi_navi">实时导航</string>
    <string name="navi_strategy_speed">速度最快</string>
    <string name="navi_strategy_cost">避免收费</string>
    <string name="navi_strategy_distance">距离最短</string>
    <string name="navi_strategy_nohighway">不走高速快速路</string>
    <string name="navi_strategy_timenojam">时间最短且躲避拥堵</string>
    <string name="navi_strategy_costnojam">避免收费且躲避拥堵</string>


    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>

    <string name="setting">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="yes">"  是  "</string>
    <string name="no">"  否  "</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="daynightmode">"昼夜模式    "</string>
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="jamrecalculation">"拥堵重算    "</string>
    <string name="trafficbroadcast">"交通播报    "</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="screenon">"屏幕常亮    "</string>
    <string name="routeshow">线路展示</string>
    <string name="tapmap">点击地图设置</string>
    <string name="starttapmap">我的位置（可点击地图设置）</string>
    <string name="walkdescription">步行状态不可用</string>
    <string name="routeinfo">全程   --公里/--分钟    收费 --元</string>
    <string name="routeinfo_1">全程 </string>
    <string name="routeinfo_2">公里/</string>
    <string name="routeinfo_3">"分钟    收费"</string>
    <string name="routeinfo_4">元</string>
    <string name="routeinfo_default">--</string>
    <string name="app_id">572170e4</string>
    <string name="mypoistion">我的位置</string>
    <string name="mappoistion">地图点选</string>
    <string name="positioninfo">位置信息</string>

    <string-array name="preference_values_tts_role">z
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>vixq</item>
        <item>vixf</item>
        <item>vixm</item>
        <item>vixl</item>
        <item>vixr</item>
        <item>vixyun</item>
        <item>vixk</item>
        <item>vixqa</item>
        <item>vixying</item>
        <item>vixx</item>
        <item>vinn</item>
        <item>vils</item>
    </string-array>

    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>
    <string name="title_activity_map_nav">MapNavActivity</string>
    <string name="title_activity_index_of_oamain">魅力马龙公共管理系统</string>
    <string name="title_activity_index_of_oacreate_new_task">创建新任务</string>
    <string name="title_activity_index_of_oalist">魅力马龙</string>
    <string name="title_activity_demo2">demo2Activity</string>
    <string name="title_activity_demo3">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_index_of_oachange_pwd">修改密码</string>
    <string name="title_activity_new_office_home">魅力马龙公共管理系统</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_new_office_fragment_zhongdianxiangmu_lev2">重点项目</string>


    <string name="tv_tiem1">穿衣指数</string>
    <string name="tv_tiem2">污染指数</string>
    <string name="tv_tiem3">正在加载...</string>
    <string name="tv_tiem4">运动指数</string>
    <string name="tv_tiem5">PM2.5指数</string>
    <string name="tv_tiem6">户外运动</string>
    <string name="tv_tiem7">洗车指数</string>
    <string name="tv_tiem8">穿衣</string>
    <string name="tv_tiem9">紫外线指数</string>
    <string name="tv_tiem10">室外推荐</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <drawable name="kuaisutongdaoontouch">#e2393c</drawable>
    <drawable name="kuaisutongdaonotouch">#d33336</drawable>


    <drawable name="banjian_chaxunon">#d33336</drawable>
    <drawable name="banjian_chaxunno">#e2393c</drawable>

    <drawable name="sign_on">#38dda7</drawable>
    <drawable name="sign_no">#20c993</drawable>



    <drawable name="ontouch">#eeeeee</drawable>
    <drawable name="notouch">#ffffff</drawable>
    <drawable name="guanliontouch">#ff8155</drawable>

    <string name="banquan">版权所有</string>
    <string name="zhengfu">云南省曲靖市马龙县人民政府</string>
    <string name="riqi">2015-2016</string>



</resources>
