<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ciist_weather_tupian_baitian_a"
    android:orientation="vertical" >
    <ProgressBar
        android:id="@+id/weather_pro"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:layout_marginTop="250dp"
        />
    <RelativeLayout
        android:id="@+id/wearher_relat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/weather_tv_num1"
                style="@style/TextColorTitleNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="6dp"
                android:text="8"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/weather_tv_num2"
                style="@style/TextGeneralSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-30dp"
                android:text="3-8"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/weather_tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="马龙县"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/weather_tv_data"
                style="@style/TextGeneralSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="2015年01月08日"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/weather_tv_nowtime"
                style="@style/TextGeneralSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="今天"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <com.ciist.weather.RefreshableView
        android:id="@+id/refreshable_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/weather_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#E9E9FF"
            android:divider="#00000000" />
    </com.ciist.weather.RefreshableView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/hscro_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:background="#E9E9FF"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:id="@+id/chuanyi_rela"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TextGeneralSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_tiem1"
                            android:textSize="16sp" />

                        <ImageView
                            style="@style/ImgGeneralSet"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/ciist_weather_cloth" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="55dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tuijie_chuanyi"
                            style="@style/TextBodyGeneral"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="2dp"
                            android:text="@string/tv_tiem3"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TextGeneralSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_tiem4"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/tanke"
                            style="@style/ImgGeneralSet"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/ciist_weather_tanke" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="60dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tuijie_yundong"
                            style="@style/TextBodyGeneral"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/tv_tiem3"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:id="@+id/linnnnn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TextGeneralSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_tiem2"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/wuran"
                            style="@style/ImgGeneralSet"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/ciist_weather_tanke" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linnnnn"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tuijie_wuran"
                            style="@style/TextBodyGeneral"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/tv_tiem3"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:id="@+id/lineaee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TextGeneralSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_tiem5"
                            android:textSize="16sp" />

                        <ImageView
                            style="@style/ImgGeneralSet"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/ciist_weather_house" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lineaee"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tuijie_pm"
                            style="@style/TextBodyGeneral"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/tv_tiem3"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:id="@+id/linxiche"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TextGeneralSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_tiem7"
                            android:textSize="16sp" />

                        <ImageView
                            style="@style/ImgGeneralSet"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/ciist_weather_house" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/linxiche"
                        android:layout_below="@id/linxiche"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tuijie_xiche"
                            style="@style/TextBodyGeneral"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/tv_tiem3"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:id="@+id/linziwaixian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/TextGeneralSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_tiem9"
                            android:textSize="16sp" />

                        <ImageView
                            style="@style/ImgGeneralSet"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/ciist_weather_house" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linziwaixian"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tuijie_ziwaixian"
                            style="@style/TextBodyGeneral"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/tv_tiem3"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>